<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_app_theme"
    android:orientation="vertical"
    android:paddingStart="25dp"
    android:paddingEnd="25dp">

    <LinearLayout
        android:id="@+id/layout_register_create_account"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:visibility="gone">

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="45" />

        <EditText
            android:id="@+id/edtxt_register_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/rect_outline"
            android:hint="@string/string_edtxt_hint_id"
            android:paddingStart="14dp"
            android:paddingTop="14dp"
            android:paddingEnd="14dp"
            android:paddingBottom="14dp"
            android:singleLine="true"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="30" />

        <EditText
            android:id="@+id/edtxt_register_pw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/rect_outline"
            android:hint="@string/string_edtxt_hint_pw"
            android:paddingStart="14dp"
            android:paddingTop="14dp"
            android:paddingEnd="14dp"
            android:paddingBottom="14dp"
            android:singleLine="true"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="30" />

        <EditText
            android:id="@+id/edtxt_register_confirm_pw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/rect_outline"
            android:hint="@string/string_edtxt_hint_confirm_pw"
            android:paddingStart="14dp"
            android:paddingTop="14dp"
            android:paddingEnd="14dp"
            android:paddingBottom="14dp"
            android:singleLine="true"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="335" />

        <ImageView
            android:id="@+id/img_register_proceed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/selector_proceed_btn" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="198" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutr_register_setup_profile"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone"
        tools:visibility="visible">

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="45" />

        <EditText
            android:id="@+id/edtxt_register_fullname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/rect_outline"
            android:hint="@string/string_edtxt_hint_fullname"
            android:paddingStart="14dp"
            android:paddingTop="14dp"
            android:paddingEnd="14dp"
            android:paddingBottom="14dp"
            android:singleLine="true"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="30" />

        <EditText
            android:id="@+id/edtxt_register_phonenumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/rect_outline"
            android:hint="@string/string_edtxt_hint_gender"
            android:paddingStart="14dp"
            android:paddingTop="14dp"
            android:paddingEnd="14dp"
            android:paddingBottom="14dp"
            android:singleLine="true"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="30" />

        <EditText
            android:id="@+id/edtxt_register_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/rect_outline"
            android:hint="@string/string_edtxt_hint_location"
            android:paddingStart="14dp"
            android:paddingTop="14dp"
            android:paddingEnd="14dp"
            android:paddingBottom="14dp"
            android:singleLine="true"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="72" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/img_register_select_seller"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="3dp"
                android:background="@drawable/selector_seller_btn"
                android:clickable="true"
                android:focusable="true" />

            <ImageButton
                android:id="@+id/img_register_select_buyer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:background="@drawable/selector_buyer_btn"
                android:clickable="true"
                android:focusable="true" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="180" />

        <ImageView
            android:id="@+id/img_register_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/selector_start_btn" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="180" />

    </LinearLayout>


</LinearLayout>