<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_app_theme">


    <include
        android:id="@+id/layout_toolbar"
        layout="@layout/layout_toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/layout_toolbar">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="22dp"
            android:paddingTop="13dp"
            android:paddingEnd="22dp">


            <TextView
                android:id="@+id/txt_info_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/color_text_highlight"
                android:textSize="25sp"
                tools:text="오제호" />

            <RelativeLayout
                android:id="@+id/layout_defalut_stampme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt_info_name">

                <RelativeLayout
                    android:id="@+id/layout_detail_category_front"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:visibility="gone">

                    <ImageView
                        android:id="@+id/img_info_barcode"
                        android:layout_width="200dp"
                        android:layout_height="200dp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="22dp" />

                    <LinearLayout
                        android:id="@+id/layout_stamp_stampme"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/img_info_barcode"
                        android:layout_marginTop="22dp"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <LinearLayout
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:orientation="vertical">

                                <ImageView
                                    android:id="@+id/img_stamp_cafe_stampme"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center_horizontal"
                                    android:background="@drawable/ic_stamp_1" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center_horizontal"
                                    android:layout_marginTop="4dp"
                                    android:text="@string/string_stamp_name_cafe"
                                    android:textColor="@color/color_text"
                                    android:textSize="13sp" />
                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:orientation="vertical">

                                <ImageView
                                    android:id="@+id/img_stamp_restaurant_stampme"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center_horizontal"
                                    android:background="@drawable/ic_stamp_1" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center_horizontal"
                                    android:layout_marginTop="4dp"
                                    android:text="@string/string_stamp_name_restaurant"
                                    android:textColor="@color/color_text"
                                    android:textSize="13sp" />

                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:orientation="vertical">

                                <ImageView
                                    android:id="@+id/img_stamp_store_stampme"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center_horizontal"
                                    android:background="@drawable/ic_stamp_1" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center_horizontal"
                                    android:layout_marginTop="4dp"
                                    android:text="@string/string_stamp_name_store"
                                    android:textColor="@color/color_text"
                                    android:textSize="13sp" />
                            </LinearLayout>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="34dp"
                            android:orientation="horizontal">

                            <LinearLayout
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:orientation="vertical">

                                <ImageView
                                    android:id="@+id/img_stamp_mart_stampme"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center_horizontal"
                                    android:background="@drawable/ic_stamp_1" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center_horizontal"
                                    android:layout_marginTop="4dp"
                                    android:text="@string/string_stamp_name_mart"
                                    android:textColor="@color/color_text"
                                    android:textSize="13sp" />
                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:orientation="vertical">

                                <ImageView
                                    android:id="@+id/img_stamp_public_stampme"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center_horizontal"
                                    android:background="@drawable/ic_stamp_1" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center_horizontal"
                                    android:layout_marginTop="4dp"
                                    android:text="@string/string_stamp_name_public"
                                    android:textColor="@color/color_text"
                                    android:textSize="13sp" />

                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:orientation="vertical">

                                <ImageView
                                    android:id="@+id/img_stamp_etc_stampme"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center_horizontal"
                                    android:background="@drawable/ic_stamp_1" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center_horizontal"
                                    android:layout_marginTop="4dp"
                                    android:text="@string/string_stamp_name_etc"
                                    android:textColor="@color/color_text"
                                    android:textSize="13sp" />
                            </LinearLayout>
                        </LinearLayout>

                    </LinearLayout>

                    <TextView
                        android:id="@+id/txt_tip_stampme"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/layout_stamp_stampme"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="30dp"
                        android:text="@string/string_tip"
                        android:textColor="@color/color_text_light"
                        android:textSize="13sp" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/layout_detail_category_back"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:visibility="invisible"
                    tools:visibility="visible">

                    <TextView
                        android:id="@+id/txt_category_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:textColor="@color/color_text_highlight"
                        android:textSize="20sp"
                        tools:text="카페" />

                    <ImageView
                        android:id="@+id/img_category_back"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:background="@drawable/selector_close_btn" />

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/list_category_detail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/txt_category_name"
                        android:layout_marginTop="36dp" />

                    <TextView
                        android:id="@+id/txt_category_load_fail"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_below="@+id/txt_category_name"
                        android:layout_centerVertical="true"
                        android:layout_marginTop="100dp"
                        android:gravity="center"
                        android:text="@string/string_list_load_failed"
                        android:textColor="@color/color_text"
                        android:textSize="16sp"
                        android:visibility="visible" />

                </RelativeLayout>


            </RelativeLayout>


            <ImageView
                android:id="@+id/img_latest_stampme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/layout_defalut_stampme"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="36dp"
                android:background="@drawable/btn_latest_n" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/list_latest_stamps"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/img_latest_stampme">

            </android.support.v7.widget.RecyclerView>

        </RelativeLayout>

    </ScrollView>
</RelativeLayout>