<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_app_theme">

    <include
        android:id="@+id/layout_toolbar"
        layout="@layout/layout_toolbar" />

    <RelativeLayout
        android:id="@+id/layout_barcode_focus"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/layout_toolbar"
        android:background="@color/color_white"
        android:paddingStart="16dp"
        android:paddingTop="16dp"
        android:paddingEnd="16dp"
        android:paddingBottom="50dp">

        <RelativeLayout
            android:id="@+id/layout_title_my_store"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/txt_logout_storeinfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center_vertical"
                android:text="@string/string_logout"
                android:textColor="@color/color_text_light"
                android:textSize="15sp" />
        </RelativeLayout>

        <ImageView
            android:id="@+id/img_store_storeinfo"
            android:layout_width="match_parent"
            android:layout_height="136dp"
            android:layout_below="@+id/layout_title_my_store"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="22dp"
            tools:background="@color/color_shops_name" />

        <RelativeLayout
            android:id="@+id/layout_stoireinfo_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/img_store_storeinfo"
            android:layout_marginTop="14dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp">

            <TextView
                android:id="@+id/txt_name_storeinfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:textColor="@color/color_text"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:text="스타벅스(백양로점)" />

            <TextView
                android:id="@+id/txt_distance_storeinfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:textColor="@color/color_text_highlight"
                android:textSize="14sp"
                tools:text="10m" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/layout_stoireinfo_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layout_stoireinfo_1"
            android:layout_marginTop="14dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp">

            <TextView
                android:id="@+id/txt_address_storeinfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:textColor="@color/color_text_light"
                android:textSize="14sp"
                android:textStyle="bold"
                tools:text="서울시 창천동 13번지" />

            <TextView
                android:id="@+id/txt_phonenumber_storeinfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:textColor="@color/color_text_light"
                android:textSize="14sp"
                tools:text="02-372-2000" />

        </RelativeLayout>

        <ImageView
            android:id="@+id/img_line_storeinfo"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/layout_stoireinfo_2"
            android:layout_marginTop="20dp"
            android:background="@color/color_toolbar_line" />

        <TextView
            android:id="@+id/txt_title_guideline_storeinfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/img_line_storeinfo"
            android:layout_alignParentStart="true"
            android:layout_marginTop="20dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="@string/string_store_info_guideline"
            android:textColor="@color/color_text"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_body_guideline_storeinfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_title_guideline_storeinfo"
            android:layout_marginTop="12dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:textColor="@color/color_text"
            android:textSize="14sp"
            tools:text="1. 개인 에코백 사용하기" />

        <TextView
            android:id="@+id/txt_1_storeinfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_body_guideline_storeinfo"
            android:layout_alignParentStart="true"
            android:layout_marginTop="32dp"
            android:gravity="center_horizontal"
            android:text="@string/string_1_guideline"
            android:textColor="@color/color_text"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/img_give_stamp_storeinfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_1_storeinfo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="18dp"
            android:background="@drawable/selector_give_stamp_btn" />

    </RelativeLayout>

</RelativeLayout>